test/errors/error33.base
A variable with the name 'x' has already been declared at line 1, columns 8-9
fun foo(x:int, x:int) {
               ^
